[package]
name = "ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagger-sdk = "0.2.15"
rand = "0.8.5"
eyre = "0.6.8"
tokio = { version = "1.25.0", features = ["full"] }

[[bin]]
name = "dagger-ci"
path = "dagger-ci.rs"
